5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1789_1597.log
== TEST (2019-05-29 18:12:42) 
-- CODE:
from numpy import*

vetorN=array(eval(input("digite o numero")))
a=<(n(v))
b= sem(v)

-- ERROR:
File "XXXX", line 4
    a=<(n(v))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:12:57) 
-- CODE:
from numpy import*

vetorN=array(eval(input("digite o numero"))
				 
-- EXECUTION TIME:
0.127413
-- ERROR:
  File "/home/codebench/codes/1789/1597/main.py", line 5
    
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:13:02) 
-- CODE:
from numpy import*

vetorN=array(eval(input("digite o numero"))
				 
-- ERROR:
File "XXXX", line 5
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:13:16) 
-- CODE:
from numpy import*

v=array(eval(input("digite o numero"))
				 
-- ERROR:
File "XXXX", line 5
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:13:58) 
-- CODE:
from numpy import*

v=array(eval(input("custo total de compras"))
		  
				 
-- ERROR:
File "XXXX", line 6
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:14:02) 
-- CODE:
from numpy import*

v=array(eval(input("custo total de compras"))
		  
				 
-- ERROR:
File "XXXX", line 6
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:15:41) 
-- CODE:
from numpy import*

v=array(eval/input("custo total de compras"))
		  
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:15:59) 
-- CODE:
from numpy import*

v=array(eval/input("custo total de compras"))
		  
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:21:08) 
-- CODE:
from numpy import*

v=array(eval/input("custo total de compras"))
a=
		  
				 
-- ERROR:
File "XXXX", line 4
    a=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:21:13) 
-- CODE:
from numpy import*

v=array(eval/input("custo total de compras"))

		  
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:21:25) 
-- CODE:
from numpy import*

v=array(eval/input("custo total de compras"))

		  
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:35) 
-- CODE:
from numpy import*

v=array(eval/input("custo total de compras"))
i=0
desconto= sam(custo)-5

while(custo{1}>=80):
	print(round,desconto 2)
	i=i+1
	print(sam(custo))

				 
-- ERROR:
File "XXXX", line 7
    while(custo{1}>=80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:03) 
-- CODE:
from numpy import*

v=array(eval/input("custo total de compras"))
i=0
desconto= sam(custo)-5

while(custo{1} >= 80):
	print(round,desconto 2)
	i=i+1
	print(sam(custo))

				 
-- ERROR:
File "XXXX", line 7
    while(custo{1} >= 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:28) 
-- CODE:
from numpy import*

v=array(eval/input("custo total de compras"))
i=0
desconto= sam(custo)-5

while(custo [1] >= 80):
	print(round,desconto 2)
	i=i+1
	print(sam(custo))

				 
-- ERROR:
File "XXXX", line 8
    print(round,desconto 2)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:50:16) 
-- CODE:
from numpy import*

custo=array(eval/input("custo total de compras"))
i=0
desconto= sam(custo)-5
if(size(custo)>0)
while(custo [1] >= 80):
	print(round,desconto 2)
	i=i+1
	print(sam(custo))

				 
-- ERROR:
File "XXXX", line 6
    if(size(custo)>0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:53:29) 
-- CODE:
from numpy import*

custo=array(eval/input("custo total de compras"))
i=0
desconto= sam(custo)-5
if(size(custo)>0)
while(custo [1] >= 80):
	print(round,desconto 2)
	i=i+1
	print(sam(custo))

				 
-- ERROR:
File "XXXX", line 6
    if(size(custo)>0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
